fix: add missing imagePullSecrets sections to pods

--- a/charts/fission-all/templates/analytics/nonhelm-install-job.yaml
+++ b/charts/fission-all/templates/analytics/nonhelm-install-job.yaml
@@ -38,4 +38,8 @@ spec:
             - name: GA_TRACKING_ID
               value: "{{ .Values.gaTrackingID }}"
       serviceAccountName: fission-svc
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets: 
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end }}
